WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
102871
Fix the ARM traditional build after
r135330
https://bugs.webkit.org/show_bug.cgi?id=102871
Summary
Fix the ARM traditional build after r135330
Csaba Osztrogonác
Reported
2012-11-20 21:41:25 PST
In file included from /mnt/raptor2/slaves/qt5-linux-armv7-release/build/Source/JavaScriptCore/bytecode/CallLinkInfo.cpp:31:0: /mnt/raptor2/slaves/qt5-linux-armv7-release/build/Source/JavaScriptCore/assembler/RepatchBuffer.h: In static member function 'static JSC::CodeLocationLabel JSC::RepatchBuffer::startOfBranchPtrWithPatchOnRegister(JSC::CodeLocationDataLabelPtr)': /mnt/raptor2/slaves/qt5-linux-armv7-release/build/Source/JavaScriptCore/assembler/RepatchBuffer.h:146:16: error: 'startOfBranchPtrWithPatchOnRegister' is not a member of 'JSC::MacroAssembler' /mnt/raptor2/slaves/qt5-linux-armv7-release/build/Source/JavaScriptCore/assembler/RepatchBuffer.h: In static member function 'static JSC::CodeLocationLabel JSC::RepatchBuffer::startOfPatchableBranchPtrWithPatchOnAddress(JSC::CodeLocationDataLabelPtr)': /mnt/raptor2/slaves/qt5-linux-armv7-release/build/Source/JavaScriptCore/assembler/RepatchBuffer.h:151:16: error: 'startOfPatchableBranchPtrWithPatchOnAddress' is not a member of 'JSC::MacroAssembler' In file included from /mnt/raptor2/slaves/qt5-linux-armv7-release/build/Source/JavaScriptCore/bytecode/CallLinkInfo.cpp:31:0: /mnt/raptor2/slaves/qt5-linux-armv7-release/build/Source/JavaScriptCore/assembler/RepatchBuffer.h: In member function 'void JSC::RepatchBuffer::revertJumpReplacementToBranchPtrWithPatch(JSC::CodeLocationLabel, JSC::AbstractMacroAssembler<JSC::ARMAssembler>::RegisterID, void*)': /mnt/raptor2/slaves/qt5-linux-armv7-release/build/Source/JavaScriptCore/assembler/RepatchBuffer.h:164:9: error: 'revertJumpReplacementToBranchPtrWithPatch' is not a member of 'JSC::MacroAssembler' In file included from /mnt/raptor2/slaves/qt5-linux-armv7-release/build/Source/JavaScriptCore/bytecode/CodeBlock.cpp:47:0: /mnt/raptor2/slaves/qt5-linux-armv7-release/build/Source/JavaScriptCore/assembler/RepatchBuffer.h: In static member function 'static JSC::CodeLocationLabel JSC::RepatchBuffer::startOfBranchPtrWithPatchOnRegister(JSC::CodeLocationDataLabelPtr)': /mnt/raptor2/slaves/qt5-linux-armv7-release/build/Source/JavaScriptCore/assembler/RepatchBuffer.h:146:16: error: 'startOfBranchPtrWithPatchOnRegister' is not a member of 'JSC::MacroAssembler' /mnt/raptor2/slaves/qt5-linux-armv7-release/build/Source/JavaScriptCore/assembler/RepatchBuffer.h: In static member function 'static JSC::CodeLocationLabel JSC::RepatchBuffer::startOfPatchableBranchPtrWithPatchOnAddress(JSC::CodeLocationDataLabelPtr)': /mnt/raptor2/slaves/qt5-linux-armv7-release/build/Source/JavaScriptCore/assembler/RepatchBuffer.h:151:16: error: 'startOfPatchableBranchPtrWithPatchOnAddress' is not a member of 'JSC::MacroAssembler' In file included from /mnt/raptor2/slaves/qt5-linux-armv7-release/build/Source/JavaScriptCore/bytecode/CodeBlock.cpp:47:0: /mnt/raptor2/slaves/qt5-linux-armv7-release/build/Source/JavaScriptCore/assembler/RepatchBuffer.h: In member function 'void JSC::RepatchBuffer::revertJumpReplacementToBranchPtrWithPatch(JSC::CodeLocationLabel, JSC::AbstractMacroAssembler<JSC::ARMAssembler>::RegisterID, void*)': /mnt/raptor2/slaves/qt5-linux-armv7-release/build/Source/JavaScriptCore/assembler/RepatchBuffer.h:164:9: error: 'revertJumpReplacementToBranchPtrWithPatch' is not a member of 'JSC::MacroAssembler' make[3]: *** [obj/release/bytecode/CallLinkInfo.o] Error 1 make[3]: *** Waiting for unfinished jobs.... make[3]: *** [obj/release/bytecode/CodeBlock.o] Error 1
Attachments
Fix
(3.03 KB, patch)
2012-11-23 07:02 PST
,
Gabor Ballabas
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2012-11-21 06:33:22 PST
Gábor is working on it.
Sergio Martins
Comment 2
2012-11-22 07:07:18 PST
Blocks 74040. Please add as blocker.
Gabor Ballabas
Comment 3
2012-11-23 07:02:14 PST
Created
attachment 175801
[details]
Fix
Zoltan Herczeg
Comment 4
2012-11-23 07:08:23 PST
Comment on
attachment 175801
[details]
Fix r=me
Csaba Osztrogonác
Comment 5
2012-11-23 07:33:30 PST
Comment on
attachment 175801
[details]
Fix Clearing flags on attachment: 175801 Committed
r135610
: <
http://trac.webkit.org/changeset/135610
>
Csaba Osztrogonác
Comment 6
2012-11-23 07:33:36 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug